--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "container-component",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "nishanth <nishanth.ramesh1@gmail.com>",
+  "author": "aden <adenstl@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
